--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Converter</title>
+    <link rel="stylesheet" href="style.css">
     <!-- <script src="prompt.js"></script> -->
 </head>
 
@@ -36,6 +37,7 @@
             result.innerHTML = incheValue.toFixed(2)
         }
     </script>
+
 </body>
 
 </html>
